    changes to the API for both the calculation engine and the Java
    user interface.

    For general highlights of the changes between releases, see
    HIGHLIGHTS.txt in the same directory as this file.

Version 3.0  [ (under development) ] - The "XML, about bloody time" release.
    OVERALL:
        - Moved from old impenetrable binary data files to new
          compressed XML data files.
        - Removed CORBA engine/interface.  It was too much hassle to
          maintain, and with Regina building on more platforms it has
          lots much of its usefulness.
    ENGINE:
        Overall structure:
            - Move entire calculation engine into namespace regina.
            - The Great STL Port: replaced hand-rolled container classes
              with Standard Template Library classes.
            - Added XML reading/writing routines to appropriate classes.
            - Modified to also build under gcc3.
            - Removed configuration macro __MUTE_WARNINGS.
            - Replaced configuration macros __NO_IOS_NOCREATE and
              __NO_RAW_CASTING with their negations __USE_IOS_NOCREATE and
              __USE_RAW_CASTING which are optional in all situations.
            - Added configuration macros __HASH_NAMESPACE and
              __NO_NAMESPACE_ALIASES.
        Class NBoolVector, NDoubleList, NDynamicArray, NHashSet,
                NInfiniteArray, NIntMap, NOrderedPair, NPointerSet,
                NQueue, NSet, NStack, NString, NStringPair and associates:
            - All removed in favour of Standard Template Library classes.
        Class FuncDelete, FuncNew, FuncNewClonePtr, FuncNewCopyPtr,
                FuncNewCopyRef:
            - Added for use with Standard Template Library.
        Class HashPointer, HashString:
            - Added for use with Standard Template Library.
        Class NAngleStructureList:
            - New nested class NAngleStructureList::StructureInserter.
        Class NFileInfo:
            - Added.